[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/enemies/SeparateAnim/Idle.png" type="Texture" id=1]
[ext_resource path="res://entities/enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/LifeBarMiniProgress.png" type="Texture" id=3]
[ext_resource path="res://assets/Dead.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/LifeBarMiniUnder.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 8.72495

[sub_resource type="CircleShape2D" id=7]
radius = 190.43

[node name="Enemy" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )

[node name="Body" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 3

[node name="LifeBar" type="TextureProgress" parent="."]
margin_left = -8.78902
margin_top = -13.8721
margin_right = 9.21098
margin_bottom = -9.87213
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeadTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
